--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Commentary Chatbot</title>
-    <link rel="stylesheet" href="styles.css">  </head>
+    <link rel="stylesheet" href="styles.css">  
+</head>
 <body>
     <header>
         <h1>Revolutionize Your Game Day: Meet the Chatbot Changing How Fans Experience Sports!</h1>
+
+        <video width="400" controls autoplay loop muted>
+            <source src="untitled_video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video> 
+
     </header>
 
     <section class="problem-statement">
@@ -17,12 +24,12 @@
             <li>Lack of In-Depth Analysis</li>
             <li>Information Overload</li>
             <li>Delayed Analysis</li>
-            </ul>
+        </ul>
     </section>
 
     <section class="solution">
         <h2>The Solution</h2>
-        </section>
+    </section>
 
     <section class="call-to-action">
         <h2>Elevate Your Game Day: Register Today for Updates and Be Ready to Transform How You Watch Sports!</h2>
@@ -31,7 +38,6 @@
 
     <footer>
         <p>&copy; 2023 Your Name or Project Name</p> 
-    </footer>
-
+    </footer> 
 </body>
 </html>
