--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section class="problem-statement">
         <h2>The Problem</h2>
-        <p>Sports fans seeking more than just basic play-by-play commentary often face several challenges in enriching their viewing experience with deeper insights and analysis:</p>
+        <p>Sports fans seeking more than just basic play commentary often face several challenges in enriching their viewing experience with deeper insights and analysis:</p>
         <ul>
             <li>Lack of In-Depth Analysis</li>
             <li>Information Overload</li>
