--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Revolutionize Your Game Day: Meet the Chatbot Changing How Fans Experience Sports!</h1>
 
         <video width="400" controls autoplay loop muted>
-            <source src="Untitled_video.mp4" type="video/mp4">
+            <source src="untitled_video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video> 
 
@@ -19,7 +19,7 @@
 
     <section class="problem-statement">
         <h2>The Problem</h2>
-        <p>Sports fans seeking more than just basic play commentary often face several challenges in enriching their viewing experience with deeper insights and analysis:</p>
+        <p>Sports fans seeking more than just basic play-by-play commentary often face several challenges in enriching their viewing experience with deeper insights and analysis:</p>
         <ul>
             <li>Lack of In-Depth Analysis</li>
             <li>Information Overload</li>
