--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 
     <section class="solution">
         <h2>The Solution</h2>
+            <p>Our AI-powered chatbot transforms how fans experience sports. Here's how:</p>
+
+            <ul>
+    <li>In-Depth Analysis: Get detailed insights, stats, and breakdowns that go beyond surface-level commentary.</li>
+    <li>Personalized Experience: Tailor the chatbot to your favorite teams, players, and specific interests.</li>
+    <li>Answers at Your Fingertips:  Ask questions, get clarifications, and explore the game in real-time.</li>
+    <li>Community Connection:  Discuss the game with like-minded fans in a focused environment.</li> 
+</ul>
     </section>
 
     <section class="call-to-action">
