--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <header>
         <h1>Revolutionize Your Game Day: Meet the Chatbot Changing How Fans Experience Sports!</h1>
 
+         <div class="video-and-image">  
         <video width="400" controls autoplay loop muted>
-            <source src="Untitled_video.mp4" type="video/mp4">
+            <source src="untitled_video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video> 
+
+        <img src="image_2.jpg" alt="Sports Commentary Image" width="300"> 
+    </div> 
 
     </header>
 
