--- a/index.html
+++ b/index.html
@@ -3,49 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports Commentary Chatbot</title>
+    <title>Sports Commentary Chatbot - Landing Page</title>
     <link rel="stylesheet" href="styles.css">  
 </head>
 <body>
     <header>
         <h1>Revolutionize Your Game Day: Meet the Chatbot Changing How Fans Experience Sports!</h1>
 
-         <div class="video-and-image">  
-        <video width="400" controls autoplay loop muted>
-            <source src="Untitled_video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video> 
-
-        <img src="image_4.jpg" alt="Sports Commentary Image" width="300"> 
-    </div> 
-
+        <div class="video-container">  
+            <video width="400" controls autoplay loop muted>
+                <source src="untitled_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>     
+        </div>
     </header>
 
-    <section class="problem-statement">
-        <h2>The Problem</h2>
-        <p>Sports fans seeking more than just basic play-by-play commentary often face several challenges in enriching their viewing experience with deeper insights and analysis:</p>
-        <ul>
-            <li>Lack of In-Depth Analysis</li>
-            <li>Information Overload</li>
-            <li>Delayed Analysis</li>
-        </ul>
-    </section>
-
-    <section class="solution">
-        <h2>The Solution</h2>
-            <p>Our AI-powered chatbot transforms how fans experience sports. Here's how:</p>
-
-            <ul>
-    <li>In-Depth Analysis: Get detailed insights, stats, and breakdowns that go beyond surface-level commentary.</li>
-    <li>Personalized Experience: Tailor the chatbot to your favorite teams, players, and specific interests.</li>
-    <li>Answers at Your Fingertips:  Ask questions, get clarifications, and explore the game in real-time.</li>
-    <li>Community Connection:  Discuss the game with like-minded fans in a focused environment.</li> 
-</ul>
-    </section>
-
     <section class="call-to-action">
-        <h2>Elevate Your Game Day: Register Today for Updates and Be Ready to Transform How You Watch Sports!</h2>
-        <button>Sign Up Now</button> 
+        <h2>Ready for Deeper Insights?</h2>
+        <a href="content.html" class="button">Learn More</a> 
     </section>
 
     <footer>
