--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="video-container">  
             <video width="400" controls autoplay loop muted>
-                <source src="untitled_video.mp4" type="video/mp4">
+                <source src="Untitled_video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>     
         </div>
