--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
                 Your browser does not support the video tag.
             </video>     
         </div>
+        
+        <div class="image-container">  
+    <img src="interactive-soccer-image.jpg" alt="Interactive Soccer Image" usemap="#soccermap"> 
+
+    <map name="soccermap">
+        <area shape="rect" coords="x1,y1,x2,y2" href="#" alt="Player 1">
+        </map>
+        </div>
+        
     </header>
 
     <section class="call-to-action">
