--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         </div>
         
         <div class="image-container">  
-    <img src="interactive-soccer-image.jpg" alt="Interactive Soccer Image" usemap="#soccermap"> 
-
-    <map name="soccermap">
-        <area shape="rect" coords="x1,y1,x2,y2" href="#" alt="Player 1">
-        </map>
-        </div>
+    <img src="interactive-soccer-image.jpg" alt="Interactive Soccer Image"> 
+    <div class="hover-text">
+        Arsenal vs Man City: Head to Head <br>
+        Arsenal: 10 <br>
+        Man City: 11 <br>
+        Draw: 5
+    </div> 
+</div>
         
     </header>
 
