--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
             <a href="content.html" class="button">Learn More</a> 
         </section>
 
-        <div class="image-container">  
-            <img src="interactive-soccer-image.jpg" alt="Interactive Soccer Image" class="interactive-image"> 
-            <div class="hover-text">
-                Arsenal vs Man City: Head to Head <br>
-            </div> 
-        </div>
+    <div class="tiles"> 
+          <figure class="tile">
+            <img src="image1.jpg" alt="Anime Image 1">
+            <figcaption>Naruto: A World of Ninjas
+              Naruto Uzumaki, a mischievous orphan with a mischievous grin, charged through the bustling streets of the Hidden Leaf Village. 
+              His bright orange jumpsuit and untamed blonde hair made him a beacon of energy, a stark contrast to the wary glances of the villagers. 
+              Inside him, a powerful force stirred – the sealed spirit of the Nine-Tailed Fox, a monstrous creature that instilled fear in many. 
+              Yet, behind the boisterous facade, Naruto harbored a burning dream: to become Hokage, the village leader, and earn the respect he longed for.</figcaption>
+          </figure>
+     </div>
     </section>
 
     <footer>
