--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="tiles"> 
           <figure class="tile">
-            <img src="interactive-soccer-image.jpg" alt="Anime Image 1">
+            <img src="interactive-soccer-image.jpg" alt="Arsenal">
             <figcaption>Arsenal</figcaption>
           </figure>
      </div>
