--- a/content.html
+++ b/content.html
@@ -42,15 +42,11 @@
         const nextFactButton = document.getElementById('next-fact');
 
         const facts = [
-            "The Invincibles: Arsenal is the only team in Premier League history to go unbeaten throughout an entire 38-game season. This feat was achieved during the 2003-2004 season under the management of Arsène Wenger, earning them the nickname "The Invincibles",
-
-"Highbury to Emirates: Arsenal moved from their historic stadium, Highbury, to the Emirates Stadium in 2006. The Emirates Stadium has a capacity of over 60,000 spectators and is one of the largest stadiums in the Premier League.",
-
-"Thierry Henry, Arsenal's All-Time Top Scorer: French striker Thierry Henry holds the record for the most goals scored for Arsenal, with an impressive tally of 228 goals in all competitions during his two spells at the club (1999-2007 and 2012).",
-
-"The Cannon Symbol: Arsenal's iconic crest features a cannon, which has been a symbol of the club since its formation in 1886. Initially, the cannon faced left, but it was later redesigned to face right for aesthetic reasons.",
-
-"Herbert Chapman's Legacy: Herbert Chapman, Arsenal's manager in the 1920s and 1930s, revolutionized English football with his tactical innovations and emphasis on professionalism. He introduced floodlighting, numbered shirts, and the WM formation, which became widely adopted. Chapman's legacy continues to influence modern football management."
+            "The Invincibles: Arsenal is the only team in Premier League history to go unbeaten throughout an entire 38-game season. This feat was achieved during the 2003-2004 season under the management of Arsène Wenger",
+            "Highbury to Emirates: Arsenal moved from their historic stadium, Highbury, to the Emirates Stadium in 2006. The Emirates Stadium has a capacity of over 60,000 spectators and is one of the largest stadiums in the Premier League.",
+            "Thierry Henry, Arsenal's All-Time Top Scorer: French striker Thierry Henry holds the record for the most goals scored for Arsenal, with an impressive tally of 228 goals in all competitions during his two spells at the club (1999-2007 and 2012).",
+            "The Cannon Symbol: Arsenal's iconic crest features a cannon, which has been a symbol of the club since its formation in 1886. Initially, the cannon faced left, but it was later redesigned to face right for aesthetic reasons.",
+            "Herbert Chapman's Legacy: Herbert Chapman, Arsenal's manager in the 1920s and 1930s, revolutionized English football with his tactical innovations and emphasis on professionalism. He introduced floodlighting, numbered shirts, and the WM formation, which became widely adopted. Chapman's legacy continues to influence modern football management."
         ];
 
         let currentFactIndex = 0; 
